[metadata]
name = lluv
author = Jacob Potter
author-email = jacobpotter7767@gmail.com
summary = Front end for the linux command DD with a progress bar.
url = "https://github.com/jmp1617/LLUV"
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: Linux
    Programming Language :: Python :: 3.5
keywords =
    python
    github
    dd
    progress
    dd-frontend
packages =
    src