[metadata]
name = lluv
author = Jacob Potter
author-email = jacobpotter7767@gmail.com
summary = Front end for the linux command DD with a progress bar.
url = "https://github.com/jmp1617/LLUV.git"
description-file = README.md
license = MIT
version = 1.2.2
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
keywords =
    python
    github
    dd
    progress
    dd-frontend
packages =
    lluv
[entry_points]
console_scripts =
    lluv = lluv:console
    lluv-tui = lluv:tui
    lluv-cli = lluv:cli
    lluv-simple_cli = lluv:simple_cli
